tests/a/tests/integrity/fail/let/let.0.stderr
error: expected {root}{root}, found {root}{b,root}
  --> tests/integrity/fail/let/let.0.rs:10:13
   |
10 |     let y = x;
   |             ^
